--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ mod_name=Charm
 mod_version=1.4
 
 minecraft_version=1.12.2
-forge_version=14.23.5.2854
-forge_mappings=20180814-1.12
+forge_version=14.23.5.2847
+forge_mappings=stable_39
 
 dir_output=./out
 jei=4.15.0.297
