--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,20 @@
-plugins {
-	id 'fabric-loom' version '0.4-SNAPSHOT'
-	id 'maven-publish'
+buildscript {
+	repositories {
+		maven { url = 'https://files.minecraftforge.net/maven' }
+		maven { url = 'https://repo.spongepowered.org/maven' }
+		jcenter()
+		mavenCentral()
+	}
+	dependencies {
+		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+		classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
+	}
 }
+
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'eclipse'
+apply plugin: 'maven'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
@@ -11,49 +24,80 @@ version = project.mod_version
 group = project.maven_group
 
 minecraft {
-	accessWidener = file("src/main/resources/charm.accesswidener")
+	mappings channel: "${project.mapping_channel}", version: "${project.mapping_version}"
+	accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
+
+	runs {
+		client {
+			workingDirectory project.file('run')
+			arg "-mixin.config=charm.mixins.json"
+
+			// Recommended logging data for a userdev environment
+			property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+			// Recommended logging level for the console
+			property 'forge.logging.console.level', 'debug'
+		}
+
+		server {
+			workingDirectory project.file('run')
+			arg "-mixin.config=charm.mixins.json"
+
+			// Recommended logging data for a userdev environment
+			property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+			// Recommended logging level for the console
+			property 'forge.logging.console.level', 'debug'
+		}
+	}
 }
 
 dependencies {
-	//to change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	// third party
+//	compile fg.deobf("vazkii.autoreglib:AutoRegLib:${project.arl_version}")
+	compileOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}:api")
+	runtimeOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}")
+}
 
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
-	implementation 'com.google.code.findbugs:jsr305:3.0.2'
+repositories {
+	maven {
+		// for AutoRegLib
+		name "blamejared"
+		url "http://maven.blamejared.com/"
+	}
+	maven {
+		// for JEI
+		name "progwml6"
+		url "http://dvs1.progwml6.com/files/maven"
+	}
+	maven {
+		// for Mappings
+		name "gigaherz"
+		url "http://dogforce-games.com/maven/"
+	}
+}
 
-	// REI
-	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api:${project.rei_version}"
-	modRuntime "me.shedaniel:RoughlyEnoughItems:${project.rei_version}"
+mixin {
+	add sourceSets.main, 'charm.mixins.refmap.json'
 }
 
 processResources {
-	inputs.property "version", project.version
-
+	// replace stuff in mcmod.info, nothing else
 	from(sourceSets.main.resources.srcDirs) {
-		include "fabric.mod.json"
-		expand "version": project.version
+		include 'META-INF/mods.toml'
+
+		// replace version and mcversion
+		expand 'mod_version': project.mod_version
 	}
 
+	// copy everything else, thats not the mods.toml
 	from(sourceSets.main.resources.srcDirs) {
-		exclude "fabric.mod.json"
+		exclude 'META-INF/mods.toml', '**/psd/**'
 	}
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType(JavaCompile) {
-	options.encoding = "UTF-8"
-}
-
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
 	classifier = "sources"
@@ -61,26 +105,23 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 }
 
 jar {
-	from "LICENSE"
-}
+    archiveName = "${project.archives_base_name}.${extension}"
 
-// configure the maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
-		}
-	}
+	manifest {
+        attributes([
+            "Specification-Title": "${project.mod_id}",
+            "Specification-Vendor": "svenhjol",
+            "Specification-Version": "1", // We are version 1 of ourselves
+            "Implementation-Title": "${project.mod_id}",
+            "Implementation-Version": "${project.mod_version}",
+            "Implementation-Vendor": "svenhjol",
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+            "MixinConfigs": "charm.mixins.json"
+        ])
+    }
 
-	// select the repositories you want to publish to
-	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
-	}
+    exclude "**/*.bat"
+    exclude "**/*.psd"
+    exclude "**/*.exe"
+    exclude "**/unused"
 }
