--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/use
-	# or https://modmuss50.me/fabric.html
+# Forge Properties
 	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.27
-	loader_version=0.10.0+build.208
+    forge_version=34.1.19
+	mapping_version=20200916-1.16.2
+	mapping_channel=snapshot
 
 # Mod Properties
+    mod_id = charm
 	mod_version = 2.1.0
 	maven_group = svenhjol
-	archives_base_name = charm-fabric-1.16.3
+	archives_base_name = charm-forge-1.16.3
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.22.1+build.409-1.16
-	rei_version=5.6.1
+	quark_version=r2.4-270
+	jei_version=7.6.0.49
+	arl_version=1.6-46.85
