--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 //	compile fg.deobf("vazkii.autoreglib:AutoRegLib:${project.arl_version}")
 	compileOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}:api")
 	runtimeOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}")
+
+	compile "com.moandjiezana.toml:toml4j:0.7.2"
 }
 
 repositories {
