--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx1500M
 
 # Forge Properties
 	minecraft_version=1.16.3
-    forge_version=34.1.19
+    forge_version=34.1.32
 	mapping_version=20200916-1.16.2
 	mapping_channel=snapshot
 
 # Mod Properties
-    mod_id = charm
-	mod_version = 2.1.0
-	maven_group = svenhjol
-	archives_base_name = charm-forge-1.16.3
+    mod_id=charm
+	mod_version=2.1.0
+	maven_group=svenhjol
+	archives_base_name=charm-forge-1.16.3
 
 # Dependencies
-	quark_version=r2.4-270
+	quark_version=r2.4-275
 	jei_version=7.6.0.49
 	arl_version=1.6-46.85
