--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ minecraft {
 		client {
 			properties 'forge.logging.console.level': 'debug'
 			properties 'fml.earlyprogresswindow': 'false'
-			workingDirectory project.file('run').canonicalPath
+			workingDirectory project.file('run')
 			arg "-mixin.config=charm.mixins.json"
 			source sourceSets.main
 			jvmArgs "-Xmx1500M"
@@ -36,7 +36,7 @@ minecraft {
 
 		server {
 			properties 'forge.logging.console.level': 'debug'
-			workingDirectory project.file('run').canonicalPath
+			workingDirectory project.file('run')
 			arg "-mixin.config=charm.mixins.json"
 			source sourceSets.main
 		}
@@ -77,6 +77,7 @@ repositories {
 
 mixin {
 	add sourceSets.main, 'charm.mixins.refmap.json'
+	add sourceSets.main, 'quark.mixins.refmap.json'
 }
 
 processResources {
