--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ minecraft {
 		client {
 			properties 'forge.logging.console.level': 'debug'
 			properties 'fml.earlyprogresswindow': 'false'
+			properties 'mixin.env.disableRefMap': 'true'
 			workingDirectory project.file('run')
 			arg "-mixin.config=charm.mixins.json"
 			source sourceSets.main
@@ -36,6 +37,7 @@ minecraft {
 
 		server {
 			properties 'forge.logging.console.level': 'debug'
+			properties 'mixin.env.disableRefMap': 'true'
 			workingDirectory project.file('run')
 			arg "-mixin.config=charm.mixins.json"
 			source sourceSets.main
@@ -47,8 +49,8 @@ dependencies {
 	minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
 
 	// third party
-	compileOnly fg.deobf("vazkii.quark:Quark:${project.quark_version}")
-	compileOnly fg.deobf("vazkii.autoreglib:AutoRegLib:${project.arl_version}")
+	compile fg.deobf("vazkii.quark:Quark:${project.quark_version}")
+	compile fg.deobf("vazkii.autoreglib:AutoRegLib:${project.arl_version}")
 	compileOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}:api")
 	runtimeOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}")
 }
