--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ buildscript {
 	}
 }
 
+plugins {
+    id "com.wynprice.cursemaven" version "2.1.1"
+}
+
+
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 
@@ -53,6 +58,9 @@ dependencies {
 	compile fg.deobf("vazkii.autoreglib:AutoRegLib:${project.arl_version}")
 	compileOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}:api")
 	runtimeOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}")
+
+    compile fg.deobf("curse.maven:apotheosis:3095843")
+	compile fg.deobf("curse.maven:placebo:3092113")
 }
 
 repositories {
