Disable inclusion of apotheosis

--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,9 @@ dependencies {
 	compileOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}:api")
 	runtimeOnly fg.deobf("mezz.jei:jei-${project.minecraft_version}:${project.jei_version}")
 
-    compile fg.deobf("curse.maven:apotheosis:3095843")
-	compile fg.deobf("curse.maven:placebo:3092113")
+	// for testing apotheosis
+    //compile fg.deobf("curse.maven:apotheosis:3095843")
+	//compile fg.deobf("curse.maven:placebo:3092113")
 }
 
 repositories {
