--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,12 @@
 	archives_base_name=charm-forge-1.16.4
 
 # Dependencies
+	charm_version=forge-1.16.4-2.2.2
 	quark_version=r2.4-281.1477
 	jei_version=7.6.0.55
 	arl_version=1.6-46.85
+	abnormals_core_version=3154969
+	buzzier_bees_version=3154937
+	placebo_version=3092113
+	apotheosis_version=3095843
+
